# tictactoe

./: README.md  pyproject.toml
tictactoe/: board.py  main.py  player.py  test_board.py  tui.py
